[package]
name = "flor"
version = "0.1.0"
edition = "2024"
description = "Service mesh for network infrastructure and robotics"
repository = "https://github.com/rete-labs/flor"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = {version = "0.4", default-features = false, features = ["clock"]}
env_logger = "0.11"
error-stack = "0.7"
husky-rs = "0.3"
log = { version = "0.4", features = ["std"] }
thiserror = "2.0"
