[package]
description = "Service mesh for network infrastructure and robotics"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "flor"
repository = "https://github.com/rete-labs/flor"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
error-stack = "0.7"
fast-socks5 = "1.0"
fundle = "0.3"
husky-rs = "0.3"
log = { version = "0.4", features = ["std"] }
mockall_double = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

# Using "ring" backend across all crypto libs, as quinn uses it by default
quinn = { version = "0.11" }
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
spiffe = { version = "0.15", default-features = false, features = ["x509"] }
pem = "3"
time = { version = "0.3", default-features = false, features = ["std"] }
x509-parser = { version = "0.18", features = ["verify"] }

[dev-dependencies]
assert_cmd = "2"
ctor = "0.8"
mockall = "0.14"
serial_test = "3.4"
tempfile = "3"
